# optimal-cycles

./: Makefile  README.md  pyproject.toml
examples/: 001_timeseries.ipynb  002_time_label_test.ipynb  003_stability.ipynb  004_examples_doublesine.ipynb  004a_examples_H2_doublesine.ipynb  005_example_enso165.ipynb  006_examples_enso14.ipynb  007_example_enso19.ipynb  utils.py
recycle/: __init__.py  timeseries.py
recycle/core/: __init__.py  complex.py  optimization.py  weight.py
